Reorganization in preparation for submitting alire crate(s).

--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,14 @@
 # Build directories
 obj/*
 lib/*
+*/obj/*
+*/lib/*
 
 # Alire directories
 alire/*
 config/*
+*/alire/*
+*/config/*
 
 # Other files
 *.HEX
@@ -29,8 +33,7 @@ printer.txt
 
 # The executables
 loadcpm
-simcli
-simcputest
+simcpucli
 #
 #  LaTeX intermediate files
 #
