--- a/alire.toml
+++ b/alire.toml
@@ -1,6 +1,6 @@
 name = "bbs_simcpu"
 description = "CPU Simulator for multiple CPUs"
-version = "0.1.0-dev"
+version = "0.1.0"
 
 authors = ["Brent Seidel"]
 maintainers = ["Brent Seidel <brentseidel@mac.com>"]
