--- a/cli/alire.toml
+++ b/cli/alire.toml
@@ -1,6 +1,13 @@
 name = "simcpucli"
 description = "CLI for CPU simulator"
-version = "0.1.0"
+version = "0.1.1"
+
+long-description = """
+This provides a simple command line interface to the CPU simulator library.
+It has commands for setting and reading memory, reading registers, and
+executing instructions.  It also uses the Tiny-Lisp library so that many
+of these actions can be scripted.
+"""
 
 authors = ["Brent Seidel"]
 maintainers = ["Brent Seidel <brentseidel@mac.com>"]
@@ -10,6 +17,9 @@ website = "https://github.com/BrentSeidel/Sim-CPU"
 tags = ["cpu-simulator"]
 
 executables = ["simcpucli"]
+
+[[depends-on]]
+gnat = ">7.5"
 
 [[depends-on]]
 bbs = "~0.1.0"
