--- a/alire.toml
+++ b/alire.toml
@@ -1,9 +1,9 @@
 name = "bbs_simcpu"
 description = "CPU Simulator for multiple CPUs"
-version = "0.1.1"
+version = "0.2.0"
 
 long-description="""
-This contains simulators for the 8080/8085 and 680000/68008 processors.
+This contains simulators for the 8080/8085/Z80 and 680000/68008 processors.
 More will probably be added with time.
 """
 
@@ -12,7 +12,7 @@ maintainers = ["Brent Seidel <brentseidel@mac.com>"]
 maintainers-logins = ["BrentSeidel"]
 licenses = "GPL-3.0-or-later"
 website = "https://github.com/BrentSeidel/Sim-CPU"
-tags = ["cpu-simulator", "i8080", "m68000"]
+tags = ["cpu-simulator", "i8080", "z80" "m68000"]
 
 [[depends-on]]
 bbs = "~0.1.0"
