--- a/loadcpm/alire.toml
+++ b/loadcpm/alire.toml
@@ -1,6 +1,14 @@
 name = "loadcpm"
 description = "Write CP/M (or other similar binary) to floppy disk image"
-version = "0.1.1"
+version = "0.2.0"
+
+long-description="""
+Three basic functions are available.  First, a CP/M image in Intel Hex
+format can be added to the first two track of an existing floppy disk
+image.  Second, a floppy disk image can be created and initialized with
+the CP/M image on the first two tracks.  Finally, a small bootstrap
+program can be created to load CP/M from the disk image into the simulator.
+"""
 
 authors = ["Brent Seidel"]
 maintainers = ["Brent Seidel <brentseidel@mac.com>"]
@@ -13,6 +21,3 @@ executables = ["loadcpm"]
 
 [[depends-on]]
 bbs = "~0.1.0"
-
-[[depends-on]]
-bbs_simcpu = "~0.1.0 | ~0.2.0"
