--- a/alire.toml
+++ b/alire.toml
@@ -1,6 +1,6 @@
 name = "bbs_simcpu"
 description = "CPU Simulator for multiple CPUs"
-version = "0.3.2"
+version = "0.3.3"
 
 long-description="""
 This contains simulators for the 6502, 8080/8085/Z80 and 680000/68008 processors.
@@ -12,7 +12,7 @@ maintainers = ["Brent Seidel <brentseidel@mac.com>"]
 maintainers-logins = ["BrentSeidel"]
 licenses = "GPL-3.0-or-later"
 website = "https://github.com/BrentSeidel/Sim-CPU"
-tags = ["cpu-simulator", "6502", "i8080", "z80", "m68000"]
+tags = ["cpu-simulator", "6502", "i8080", "i8085", "z80", "m68000"]
 
 [[depends-on]]
 bbs = "~0.1.0"
